@@ -4,7 +4,7 @@
           glossaries, and translation leveraging into updated projects.
 
  Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
-           (C) 2007 Didier Briel
+           (C) 2007-2010 Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -53,26 +53,28 @@ public class OpenXMLDialect extends DefaultXMLDialect
         defineParagraphTags(new String[]
         {
             // Word
-            "w:p",                                                              // NOI18N
-            "w:tab",                                                            // NOI18N
-            "w:br",                                                             // NOI18N
+            "w:p",                                                              
+            "w:tab",                                                            
+            "w:br",                                                             
             // Excel
-            "si",                                                               // NOI18N
+            "si",                                                               
             // PowerPoint
-            "a:p",                                                              // NOI18N
+            "a:p",                                                              
         });
         
         if (options.getTranslateHiddenText()) // Word
-            defineOutOfTurnTag("w:instrText");                                  // NOI18N
+            defineOutOfTurnTag("w:instrText");                                  
         else
-            defineIntactTag("w:instrText");                                     // NOI18N
+            defineIntactTag("w:instrText");                                     
         
         defineIntactTags(new String[]
         {
             // Excel
-            "authors",                                                          // NOI18N
+            "authors",                                                          
             // PowerPoint
-            "p:attrName",                                                       // NOI18N
+            "p:attrName",
+            // Word
+            "wp:align",
         });        
     }
 }
